--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,10 @@ ext {
                buildToolsVersion: '28.0.3',
                minSdkVersion    : 16,
                targetSdkVersion : 27,
-               versionCode      : 2,
-               versionName      : '0.2.0',]
+               versionCode      : 3,
+               versionName      : '0.3.0',
+               emailDebug       : '15600681920@163.com',
+               emailRelease     : 'mikko.niinikoski@toonika.fi']
 
     supportLibraryVersion = '27.0.0'
     laputappVersion = '1.4.5-beta57'
